# routines

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
migrations/: 20240106185418_init.sql  20240110082717_accounts.sql  20240110221731_invite.sql  20240114210557_sessions.sql
src/: README.md  auth.rs  database.rs  error.rs  main.rs  state.rs  static.rs  templates.rs
src/models/: entries.rs  invites.rs  mod.rs  routines.rs  sessions.rs  users.rs
src/routes/: entries.rs  invite.rs  mod.rs  root.rs  routines.rs  unauthorized.rs
src/templates/: components.rs  home.rs  login.rs  mod.rs
static/: index.css
