[package]
name = "routines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-session = "3.0.0"
async-trait = "0.1.77"
axum = { version = "0.7.3", features = ["macros"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
clap = { version = "4.4.14", features = ["env", "derive"] }
dotenvy = "0.15.7"
http = "1.0.0"
include_dir = "0.7.3"
maud = "0.25.0"
mime_guess = "2.0.4"
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
	"macros",
	"uuid",
	"time",
	"sqlite",
	"runtime-tokio",
] }
time = { version = "0.3.31", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
